base/clickhouse-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-server
spec:
  ports:
  - port: 8125
    name: http
  - port: 9000
    name: tcp
  selector:
    app: clickhouse-server
